
Key to developers
-----------------

- DP   Dave Page
- AP   Andreas Pflug
- JMP  Jean-Michel Poure
- HS   Hiroshi Saito
- AHP  Adam H. Pendleton
- MP   Marc Persuy
- DAP  Darko Prenosil
- FGP  Florian G. Pflug
- MH   Magnus Hagander

Changes
-------

Date       Dev Ver    Change details
---------- --- -----  --------------
2007-05-02 DP  1.8.0  Add an option to show indent guides in the query tool.
2007-05-02 DP  1.8.0  Allow spaces to be used instead of tabs in SQL editors,
                      and ensure the width can be set sensibly.
2007-04-30 DP  1.8.0  Allow detection and conversion of line ending format in
                      the query tool.
2007-04-24 DP  1.8.0  Integrate the EnterpriseDB pl/pgsql and EDB-SPL debugger
                      with pgAdmin [Hiroshi Saito, Dave Page]
2007-04-23 DP  1.8.0  Don't try to detect if integrated autovacuum is
                      running on < 8.1. Per Simon Riggs.
2007-04-04 DP  1.8.0  Display the constraint OID for index constraints, not
                      the index OID. Add the index OID as a new property,
                      per Harald.
2007-04-04 DP  1.8.0  Ensure the password change dialog works with stored
                      passwords.
2007-04-03 DP  1.8.0  Add support for function cost and row estimations in
                      PostgreSQL 8.3+.
2007-04-03 DP  1.8.0  Add support for enums in PostgreSQL 8.3+.
2007-04-03 DP  1.8.0  Copy and paste data correctly when in a cell editor in
                      the edit grid, per Stephan Jaensch.
2007-03-30 DP  1.6.4  Avoid creating graphical explain nodes for triggers as
                      they aren't part of the plan and mess up the layout.
                      Per report from Jeremy Drake.
2007-03-30 DP  1.6.4  Fix reverse engineering of data types with a size of 0,
                      such as "timestamp(0) without timezone" per Erwin.
2007-03-30 DP  1.8.0  Display the is_called sequence flag, per Erwin.