@@ -76,6 +76,7 @@ enum
     MNU_ONLINEUPDATE_NEWDATA,
 
 	MNU_AUTOCOMPLETE,
+	MNU_AUTOINDENT,
     MNU_WORDWRAP,
 	MNU_SHOWWHITESPACE,
 	MNU_SHOWLINEENDS,
