@@ -35,6 +35,7 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2007-05-02 DP  1.8.0  Add auto-indent to the query tool.
 2007-05-02 DP  1.8.0  Add an option to show indent guides in the query tool.
 2007-05-02 DP  1.8.0  Allow spaces to be used instead of tabs in SQL editors,
                       and ensure the width can be set sensibly.
